# groth16-on-solana

./: README.md
clent_program/: Cargo.toml
clent_program/src/: errors.rs  lib.rs  utils.rs
test_program/: Cargo.toml
test_program/src/: circuit.rs  lib.rs
verify_program/: Cargo.toml
verify_program/deploy/: verify_program-keypair.json
verify_program/src/: lib.rs  verifier_key.rs
