[package]
name = "client_program"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"
ark-groth16 = "0.5.0"
ark-snark = "0.5.1"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"

solana-program = "=2.0.5"
solana-sdk = "=2.0.5"
solana-client = "=2.0.5"

rand_chacha = "0.3"
rand_core = "0.6"
num-bigint = "0.4.6"
thiserror = "1.0"
tokio = "1.40.0"
borsh = { version = "1.5.1", features = ["derive"] }